add alpine from a script tag

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "alpinejs": "^3.14.9",
     "prompt-sync": "^4.2.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "vite": "^7.0.0"
   }
 }
