--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wordle",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,10 +10,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "alpinejs": "^3.14.9",
+    "graphql": "^16.11.0",
     "prompt-sync": "^4.2.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "vite": "^7.0.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
